feat: integrate verified places into itinerary planning
Use provider-backed places as itinerary candidates with stable place identity and coordinates.

Improve OSM discovery reliability and bounded-area queries for unseen destinations.

Add runtime diagnostics and planner integration tests.